@@ -3,6 +3,13 @@ use strict;
 use warnings FATAL => 'all';
 use ExtUtils::MakeMaker;
 
+my $mm_ver = $ExtUtils::MakeMaker::VERSION;
+if ($mm_ver =~ /_/) {
+    # developer release
+    $mm_ver = eval $mm_ver;
+    die $@ if $@;
+}
+
 WriteMakefile(
     NAME             => 'Spreadsheet::HTML',
     AUTHOR           => q{Jeff Anderson <jeffa@cpan.org>},
@@ -22,4 +29,19 @@ WriteMakefile(
     PREREQ_PM => { },
     dist  => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean => { FILES => 'Spreadsheet-HTML-*' },
+
+    ($mm_ver <= 6.45
+        ? ()
+        : (META_MERGE => {
+            'meta-spec' => { version => 2 },
+            resources => {
+                repository  => {
+                    type => 'git',
+                    web  => 'https://github.com/jeffa/Spreadsheet-HTML',
+                    url  => 'https://github.com/jeffa/Spreadsheet-HTML.git',
+                },
+            },
+          })
+    ),
+
 );
